--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "postcss styles.css --config postcss.config.js -o public/css/styles.css"
+    "build-css": "postcss styles.css -o public/css/app.css",
+    "watch-css": "postcss styles.css -o public/css/app.css -w"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,8 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "postcss-url": "^10.1.3"
+  }
 }
