update: bikin tampilan login, register, tambahin regex

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     },
     "require-dev": {
         "symfony/web-server-bundle": "^4.4"
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.5"
     }
 }
